// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Array | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    [],
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Boolean | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    false,
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'false')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Null | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    null,
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'null')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Array | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Array 2`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 7`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 8`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 9`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 10`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 11`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Null | Object 12`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 7`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 8`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 9`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 10`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 11`] = `
{
  "error": "PENDING",
  "inputs": [
    0,
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '0')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Number | Object | Null 12`] = `
{
  "error": "PENDING",
  "inputs": [
    1,
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '1')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force Object | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    {},
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading '#<Object>')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Array | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Array | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    [],
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Array 2`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    [],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 1`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 2`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {
      "a": 1,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 3`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 4`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {
      "a": 1,
      "b": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 5`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 6`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {},
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 7`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 8`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 9`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 10`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Null | Object 11`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Null | Object 12`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    null,
    {
      "a": {
        "b": 2,
      },
    },
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 1`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 2`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {
      "a": 1,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 3`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 4`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {
      "a": 1,
      "b": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 5`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 6`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {},
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 7`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 8`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {
      "a": {
        "b": 1,
      },
      "c": 2,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 9`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 10`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {
      "a": {
        "b": 1,
      },
      "c": 3,
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;

exports[`brute force String | Object | Null 11`] = `
{
  "error": "PENDING",
  "inputs": [
    "a",
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": false,
}
`;

exports[`brute force String | Object | Null 12`] = `
{
  "error": "PENDING",
  "inputs": [
    "a.b",
    {
      "a": {
        "b": 2,
      },
    },
    null,
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'a.b')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": true,
}
`;
